--- a/Drowsiness_Detection/requirements.txt
+++ b/Drowsiness_Detection/requirements.txt
@@ -1,10 +1,9 @@
 streamlit
-Pillow
-streamlit_webrtc 
+PIL
+streamlit_webrtc
 VideoTransformerBase
-numpy 
+numpy
 scipy.spatial
-imutils 
 imutils
 dlib
 cv2
