--- a/Drowsiness_Detection/requirements.txt
+++ b/Drowsiness_Detection/requirements.txt
@@ -1,10 +1,9 @@
-cmake
-streamlit
-Pillow
-streamlit_webrtc
-numpy
-scipy
-imutils
-dlib
-opencv-python
-pygame
+streamlit==1.14.0
+Pillow==8.3.1
+streamlit-webrtc==0.25.0
+numpy==1.21.0
+scipy==1.7.2
+imutils==0.5.4
+dlib==19.22.0
+opencv-python==4.5.1
+pygame==2.0.1
